--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github reposo:</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. A quo libero autem repudiandae non doloribus provident illo, sed facilis nostrum suscipit tempore rem temporibus eligendi commodi illum. Ducimus, itaque animi.
+    </div>
 </body>
 </html>
