--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <p>amar sonar bangla ami tomai valobashi</p>
+    <p>amar sonar bangla ami tomai valobashi</p>
+    <p>amar sonar bangla ami tomai valobashi</p>
     <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. A quo libero autem repudiandae non doloribus provident illo, sed facilis nostrum suscipit tempore rem temporibus eligendi commodi illum. Ducimus, itaque animi.
+        
     </div>
 </body>
 </html>
